--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "files": [
     "dist"
   ],
+  "main": "dist/esm/index.js",
   "module": "dist/esm/index.js",
   "typings": "dist/esm/index.d.ts",
   "gitHooks": {
@@ -51,6 +52,7 @@
   },
   "dependencies": {
     "antd": "^4.22.4",
+    "art-antd-react": "^1.8.6",
     "babel-plugin-import": "^1.13.5",
     "react": "^18.2.0"
   },
